Allow images that being with underscore character (not supported in Jekyll by default)

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,10 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  
+include:
+ - _*.JPG
+ - _*.jpg
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
