Change URL format to match old Ghost posts

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ plugins:
 include:
  - _*.JPG
  - _*.jpg
+ 
+permalink: :title/
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
